@@ -1,3 +1,7 @@
+2005-09-19 Hasso Tepper <hasso at quagga.net>
+
+	* configure.ac: Test existance of strndup.
+
 2005-08-25 Paul Jakma <paul@jakma.org>
 
 	* configure.ac: Add -fno-omit-frame-pointer after -Os in default
